Develop GUI, finish transformation class